--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author:
   # Academic websites
   academia         : # URL
   googlescholar    : "https://scholar.google.com/citations?user=oPB5PqUAAAAJ&hl=de"
-  orcid            : ""
+  orcid            : "https://orcid.org/0000-0001-8867-0137"
   LinkedIn         : "sarah-george-b0746a195"
   researchgate     : "https://www.researchgate.net/profile/Sarah-George-39?ev=hdr_xprf"
 
