--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   # Biographic information
   avatar           : "George_foto.png"
   name             : "Sarah George"
-  pronouns         : #"she/her"  
+  pronouns         : "she/her"  
   bio              : " "
   location         : "Berlin, Germany"
   employer         : "Leibniz Institute for<br>Educational Trajectories"
